[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince211",
    "ignore:'audioop' is deprecated:DeprecationWarning",
    "ignore:the imp module is deprecated:DeprecationWarning",
]

[tool.poetry]
name = "inconnu"
version = "8.5.1"
description = "An advanced Discord dice bot and character manager for V5"
authors = ["tiltowait <208040+tiltowait@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.scripts]
inconnu = "main:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flatdict = "^4.0.1"
pymongo = {extras = ["srv"], version = "^4.2.0"}
python-dotenv = "^0.21.0"
uvicorn = "^0.37.0"
jinja2 = "^3.1.2"
jinja-markdown = "^1.210911"
fastapi = "^0.120.3"
py-cord = {extras = ["speed"], version = "^2.6.1"}
pyparsing = "^3.1.1"
cachetools = "^5.5.2"
uvloop = "^0.21.0"
async-timeout = "^5.0.1"
idna = "^3.11"
loguru = "^0.7.3"
pypcg = "^0.0.4"
beanie = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.2.0"
httpx = "^0.23.3"
pytest-cov = "^7.0.0"
mongomock-motor = "^0.0.36"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
