[project]
name = "inconnu"
version = "8.7.0"
description = "An advanced Discord dice bot and character manager for V5"
authors = [{ name = "tiltowait", email = "208040+tiltowait@users.noreply.github.com" }]
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "flatdict>=4.0.1,<5",
    "pymongo>=4.2.0,<5",
    "python-dotenv>=0.21.0,<2",
    "uvicorn>=0.37.0,<1",
    "jinja2>=3.1.2,<4",
    "jinja-markdown>=1.210911,<2",
    "fastapi>=0.120.3,<1",
    "py-cord[speed]>=2.7.0,<3",
    "pyparsing>=3.1.1,<4",
    "cachetools>=5.5.2,<6",
    "uvloop>=0.21.0,<1",
    "async-timeout>=5.0.1,<6",
    "idna>=3.11,<4",
    "loguru>=0.7.3,<1",
    "pypcg>=0.0.4,<1",
    "beanie>=2.0.0,<3",
]

[project.scripts]
inconnu = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=1.2.0,<2",
    "httpx>=0.28.1,<1",
    "pytest-cov>=7.0.0,<8",
    "mongomock-motor>=0.0.36,<1",
]

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince211",
    "ignore:'audioop' is deprecated:DeprecationWarning",
    "ignore:the imp module is deprecated:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
